# internetcomputer

./: .gitignore  COMPREHENSIVE_SHELL_INTEGRATION.md  COMPREHENSIVE_SHELL_SUCCESS.md  DSHELL_SUCCESS.md  Dockerfile  Dockerfile.kernel  FINAL_SHELL_SUCCESS.md  Jenkinsfile  LICENSE  Makefile  Makefile.mk  README.md  TEST_COMPREHENSIVE_SHELL.md  TO-DO  WORKING_DSHELL.md  boot.s  build.d  build_phobos.sh  embedded_shell_binary.d  env.sh  gdt.s  gdt_debug.s  grub.cfg  isr_stubs.s  kernel.d  kernel_shell.d  linker.ld  listfilescommands  qemu_log_check  roadmap  roadmap.md  run_dshell.sh  sh_fixes.patch  shell_binary.hex  test_dshell.sh  test_keyboard.sh  test_simple.sh  toolchainManager.d
.cursor/: project_rules.md
anonymos_config/: my-container.json  system.json
apps/devfs.d/: manifest.toml
apps/ethnode/: manifest.toml
apps/init/: manifest.toml
apps/ml_worker/: manifest.toml
apps/shell/: manifest.toml
apps/tor.d/: manifest.toml
arch/x86/: interrupt_stubs.s  linker.ld
arch/x86/boot/: boot.s  grub.cfg
arch/x86/cpu/: gdt.s  idt.s  idt_loader.s  (+4 more)
audit/: boot.catalog
build-system/recipes/: basic-shell.recipe  kernel-mainline.recipe  libsys-wc.recipe
dependencies/ttyShelly/: shelly.cabal
distributed_fs/: README.md
distributed_fs/client/: lib.rs
distributed_fs/crypto/: mod.rs
distributed_fs/examples/: usage.rs
distributed_fs/metadata/: mod.rs
distributed_fs/network/: mod.rs
distributed_fs/server/: lib.rs  main.rs
distributed_fs/storage/: mod.rs
docs/: README.md
home/user1/: .riced.conf
kernel/: README.md  container_service.d  debug_utils.s  fs.d  gdt.d  hypervisor.d  idt.d  interrupts.d  io.d  keyboard.d  logger.d  login.d  main.d  object_namespace.d  plymouth.d  ports.s  process_manager.d  shell.d  syscall.d  terminal.d  types.d  user_manager.d
kernel/arch_interface/: gdt.d  idt.d
kernel/core/: init_stubs.d  main.d
kernel/device/: pic.d  vga.d
kernel/fs/: fs.d
kernel/hardware/: network.d
kernel/host/: container_runtime.d
kernel/ipc/: secure_ipc.d
kernel/kernel/: container_service.d  elf_loader.d  embedded_shell.d  fs.d  fs_embedded.d  interrupts.d  keyboard.d  kshell.d  logger.d  process_manager.d  serial.d  shell.d  syscall.d  terminal.d
kernel/memory/: virtmem.d
kernel/net/: arp.d  ethernet.d  ip.d  udp.d
kernel/utils/: ansi_art.d  artwork.ans  debug_asm.s  plymouth_logo.ans  plymouth_logo.d
ldc_port/: druntime.patch  ic.ld  ldc_ic.cmake  libc.c
modules/-sh/: README.md  build_full.sh  commands.txt  tut19.lfe  tut20.lfe  tut21.lfe  tut22.lfe  tut23.lfe  tut24.lfe  tut25.lfe
modules/containers/: README.md
modules/distributed-fs/: Makefile  README.md  REFERENCE.md  lib.rs
modules/hypervisor/: README.md
modules/object-tree/: README.md
modules/user-services/: README.md
object-tree/: README.md
object-tree/kernel/: object_validator.d
phobos/: Makefile
scripts/: ans_to_d.py  build_comprehensive_shell.sh  build_dmd.sh  build_fs_img.sh  build_rootfs.sh  build_sh_bin.sh  build_shell.sh  build_user_hello.sh  check_shell_support.sh  config_parser.py  create_fs_with_shell.sh  docker_run.sh  docker_service.sh  embed_shell_binary.py  extract_shell.py  fetch_dmd.sh  fetch_modules.sh  fetch_posix.sh  fetch_shell.sh  hardware_isolate.sh  install_dmd_in_os.sh  install_host_utils.sh  install_posix_in_os.sh  install_shell_in_os.sh  kernel_isolate.sh  network_proxy.sh  pfsense_setup.sh  qemu_log_check.d  run_anonymos.sh  run_container.sh  run_shell.sh  run_with_gdb.sh  setup_dev_env.sh  setup_node.sh  simple_shell.c  test_config_parser.py  virtual_run.sh  wc-activate.sh  wc-build.sh
src/: buildlib.d
src/binaries/: projects.d
src/system/: filelist.txt  projects.d
tests/: test_docker.sh  test_hw_isolate.sh  test_kernel_isolate.sh  test_logger.d  test_network.d  test_network_proxy.sh  test_pfsense.sh  test_secure_ipc.d  test_virtmem.d  test_virtual.sh
toolchain/dmd_patches/: 0004-Added-PowerNex-notice-to-the-version-output.patch
userland/: README.md
userland/ink-login/: index.js  package-lock.json  package.json
userland/login/: LoginScreen.hs
userland/shell/: AnonymShell.hs  GraphicalTerminal.hs  GremlinShell.hs  MinimalShelly.hs  Shelly.hs  TtyShellyShell.hs  anonym-shell.cabal  gremlin-shell.cabal
userland/shell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
userspace/config/: system.json
userspace/hello/: hello.d
writable/system/: config.toml
(+323 files in other folders)
