cabal-version:       2.4
name:                anonym-shell
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
author:              Your Name
maintainer:          your.email@example.com
-- copyright:
category:            System
build-type:          Simple

executable anonym-shell
    main-is:          TtyShellyShell.hs
    hs-source-dirs:   ., ../../dependencies/ttyShelly/src
    build-depends:    base >= 4.14 && < 4.19,
                      text ^>=2.0,
                      process >= 1.6 && < 1.7,
                      async >= 2.2.3,
                      bytestring >= 0.10.8.0,
                      containers >= 0.5.10.2,
                      directory >= 1.3 && < 1.4,
                      enclosed-exceptions >= 1.0.1,
                      exceptions >= 0.10.0,
                      filepath >= 1.4.1.1,
                      lifted-async >= 0.10.2,
                      lifted-base >= 0.2.3.2,
                      monad-control >= 0.3.2 && < 1.1,
                      mtl >= 2.2.2,
                      time >= 1.3 && < 1.15,
                      transformers >= 0.5.2.0,
                      transformers-base >= 0.4.5,
                      unix-compat >= 0.4.1.1 && < 0.8,
                      unix >= 2.7 && < 2.9
    default-language: Haskell2010

executable anonym-terminal
    main-is:          GraphicalTerminal.hs
    build-depends:    base >= 4.14 && < 4.19,
                      vty ^>=5.37,
                      text ^>=2.0,
                      process >= 1.6 && < 1.7
    default-language: Haskell2010

executable anonym-login
    main-is:          ../login/LoginScreen.hs
    hs-source-dirs:   .., ../login, ../../dependencies/ttyShelly/src
    build-depends:    base >= 4.14 && < 4.19,
                      vty ^>=5.37,
                      text ^>=2.0,
                      bytestring >= 0.10.8.0,
                      directory >= 1.3 && < 1.4,
                      process >= 1.6 && < 1.7,
                      cryptohash-sha256 >= 0.11,
                      containers,
                      filepath
    default-language: Haskell2010
