cabal-version:       2.4
name:                gremlin-shell
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
author:              Your Name
maintainer:          your.email@example.com
-- copyright:
category:            System
build-type:          Simple

executable gremlin-shell
    main-is:          GremlinShell.hs
    -- Changed base constraint for better compatibility with solver
    build-depends:    base >= 4.14 && < 4.18, shelly ^>=1.9, text ^>=2.0
    default-language: Haskell2010