cabal-version:       2.4
name:                gremlin-shell
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
author:              Your Name
maintainer:          your.email@example.com
-- copyright:
category:            System
build-type:          Simple

executable gremlin-shell
    main-is:          GremlinShell.hs
    build-depends:    base >= 4.14 && < 4.18,
                      text ^>=2.0
    other-modules:    Shelly
    default-language: Haskell2010

executable gremlin-terminal
    main-is:          GraphicalTerminal.hs
    build-depends:    base >= 4.14 && < 4.18,
                      vty ^>=5.37,
                      text ^>=2.0,
                      process >= 1.6 && < 1.7
    default-language: Haskell2010
